# hello-opengl

./: CMakeLists.txt
src/: Bullet.cpp  Bullet.h  Camera.h  Creature.cpp  Creature.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  LightSource.h  Mesh.h  Model.h  Obstacle.cpp  Obstacle.h  Shader.h  VertexShader.glsl  main.cpp  stb_image.cpp
src/_shaders/: BoxShader.glsl  BulletFragmentShader.glsl  FragmentShader.glsl  ShipShader.glsl  VertexShader.glsl
